<resources>
    <string name="app_name">TrustWalletClone</string>
    <string name="lbl_accept_policy">I\'ve read and accept the Terms of Service and Privacy Policy.</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_terms">Terms of Service</string>
    <string name="lbl_policy">Privacy Policy</string>
    <string name="lbl_review">Please review the Trust Wallet Terms of Service and Privacy Policy</string>
    <string name="lbl_legal">Legal</string>
    <string name="no_internet">No Internet connection</string>
    <string name="back_again_to_exit">Press back again to exit</string>
    <string name="settings">Settings</string>
    <string name="please_wait">Please wait</string>
    <string name="lbl_new_passcode">Enter a new passcode</string>
    <string name="lbl_re_enter_passcode">Please re-enter your passcode</string>
    <string name="warn_keep_secure">It is my full responsibility to keep my secret phrase secure.</string>
    <string name="warn_stolen">If I expose or share my secret phrase to anybody, my funds can get stolen.</string>
    <string name="warn_lost">If I lose my secret phrase, my funds will be lost forever.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_secret_phrase">Your Secret Phrase</string>
    <string name="lbl_warning">Write down or copy these words in the right order and save them somewhere safe</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_dapp">Dapps</string>
    <string name="lbl_setting">Settings</string>
    <string name="lbl_collectibles">Collectibles will appear here</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_no_assets">No assets found</string>
    <string name="lbl_search_send">Search - Send</string>
    <string name="lbl_search_receive">Search - Receive</string>
    <string name="lbl_search_buy">Search Buy</string>
    <string name="lbl_search">Search or enter website url</string>
    <string name="lbl_notification">Notification</string>
    <string name="lal_notifications">Notifications will appear here</string>
    <string name="lbl_stake">Stake</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_copy">Copy</string>
    <string name="lbl_amount">Set Amount</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_notavailable">Not available</string>
    <string name="lbl_help_address">What is Address?</string>
    <string name="desc_address">You can watch any public address without divulging your private key. This let\'s you view balance and transactions. but not send transactions.</string>
    <string name="desc_private_key">Typically 64 alphanumeric characters</string>
    <string name="lbl_help_privatekey">What is a Private Key?</string>
    <string name="desc_json">Several lines of text beginning with {...} plus the password you used to encrypt it</string>
    <string name="lbl_help_json">What is Keystore?</string>
    <string name="desc_phrase">Typically 12 (sometimes 24) words separated by single spaces</string>
    <string name="lbl_help_phrase">What is Secret Phrase?</string>
</resources>