<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PhraseActivity"
    android:padding="30dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Back up your wallet now!"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="In the next step you will see Secret Phrase (12 words) that allows you to recover a wallet."
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray800"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/img_backup"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/warn_container"
        />

    <LinearLayout
        android:id="@+id/warn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="30dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_one"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            >
            <TextView
                android:paddingStart="20dp"
                android:paddingVertical="10dp"
                android:id="@+id/desc_one"
                android:textColor="@color/gray800"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/warn_lost"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chk_one"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chk_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:buttonTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_two"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border">
            <TextView
                android:id="@+id/desc_two"
                android:textColor="@color/gray800"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/warn_stolen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chk_two"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingStart="20dp"
                android:paddingVertical="10dp"
                />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chk_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:buttonTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_three"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border">
            <TextView
                android:id="@+id/desc_three"
                android:textColor="@color/gray800"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/warn_keep_secure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chk_three"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingStart="20dp"
                android:paddingVertical="10dp"
                />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chk_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:buttonTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_marginVertical="5dp"
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Continue"
            android:textColor="@color/white"
            android:backgroundTint="@color/gray"
            app:cornerRadius="2dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>