<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReceiveTokenActivity"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/qr_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/logoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Crypto Wallet"
                    android:textColor="@color/blue"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/qr_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_qrcode"
                app:layout_constraintTop_toBottomOf="@id/logoView" />

            <TextView
                android:id="@+id/qr_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="0x8234j8k2349871g23s8234jsd89732g4g230234"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/qr_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Send only Ehtereum(ETH) to this address. \n Sending any other coins may result in permanent loss."
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/qr_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_setamount"
            android:id="@+id/btn_copy"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.15"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/label_copy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded_primary">
                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.5"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1"
                    android:src="@drawable/ic_copy"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/label_copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/lbl_copy"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_copy"
            app:layout_constraintEnd_toStartOf="@id/btn_share"
            android:id="@+id/btn_setamount"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.15"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/label_receive"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded_gray">
                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.5"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1"
                    android:src="@drawable/ic_buy_black"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/label_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/lbl_amount"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_setamount"
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.15"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/label_share"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded_gray">
                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.5"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1"
                    android:src="@drawable/ic_share"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/label_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/lbl_share"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>